Fixed theme button's color in dark mode

--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ section {
 
 .btn-toggle {
     padding: 1em 2em 1em 1em;
+    color: var(--text-color);
     border: none;
 }
 
